--- a/public/css/sales.css
+++ b/public/css/sales.css
@@ -1,11 +1,11 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* height: 100vh; */
+    /* margin: 0; */
     background-image: url(/images/bb2.jpg);
     background-size: cover;
 }
@@ -17,9 +17,11 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     max-width: 500px;
     width: 100%;
+    margin-left: 20%;
+
 }
 
-h1 {
+h2 {
     margin-bottom: 20px;
     text-align: center;
 }
