--- a/views/all-users.pug
+++ b/views/all-users.pug
@@ -32,7 +32,7 @@ block content
                     input(type="hidden", placeholder="" name="id", value=signup._id)
                     button.btn.btn-danger.btn-sm(class="delete-btn" type="submit") Delete
                 td
-                  a.btn.btn-primary.btn-sm(href="/update-user/"+signup._id) Edit
+                  a.btn.btn-primary.btn-sm(class='updateUser-btn' href="/update-user/" +signup._id) Edit
                 td
                   a.btn.btn-success.btn-sm(href="/user") Add
           else
