--- a/public/css/credit.css
+++ b/public/css/credit.css
@@ -1,14 +1,14 @@
 body{
     background-image: url(/images/ggt.jpg); 
     background-size: cover;
-    max-width: 500px;
+    /* max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding:20px;
     margin: 80px auto;
     background-color: white;
     text-align: center;
-    align-content: center
+    align-content: center */
 }
 
 .container {
