--- a/views/index.pug
+++ b/views/index.pug
@@ -10,10 +10,10 @@ html(lang="en")
     p Never run out of cereal again! 
  
   td
-        a.btn.btn-primary.btn-sm(href='/cereal') View Products
+        a.btn.btn-primary.btn-sm(href='/viewStock') View Products
   br
   td
-      a.btn.btn-success.btn-sm(href='/login')  Login
+      a.btn.btn-success.btn-sm(href='/login') Login
 
     
   
