--- a/views/produce.pug
+++ b/views/produce.pug
@@ -22,7 +22,7 @@ block content
             option(value='G-nuts') G-nuts
             option(value='Cow Peas') Cow Peas
             option(value='Rice') Rice
-            option(value='Soypeas') Soybeans
+            option(value='Soybeans') Soybeans
           span#produceError.error-message
           br
           br
