--- a/views/manager-dashboard.pug
+++ b/views/manager-dashboard.pug
@@ -17,7 +17,7 @@ nav.vertical-navbar
   a(href='/Pro-list') Produce List
   a(href='all-users') All Users List
   a(href='Creditlist') Credit Sales List
-  a(href='reports') Report
+  a(href='viewStock') Stock Levels
   a(href='logout') Logout
 .main-content
   h1 Welcome to KGL Grocery Limited Manager's Dashboard.
