--- a/views/product.pug
+++ b/views/product.pug
@@ -1,68 +1,68 @@
-doctype html
-head
-  meta(charset='UTF-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Landing Page
-  link(rel='stylesheet', href='/css/product.css')
-header
-  h1(style='text-align: center;') KGL GROCERY LTD PRODUCTS
-main
-  section.stat-container
-    .stat-card
-      img.stat-image(src='/images/redb4.jpg' alt='Image 2')
-      h3(style='text-align: center;') Red Beans
-      p(style='text-align: center;')
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/blackb.jpg' alt='Image 2')
-      h3 Black Beans
+//- doctype html
+//- head
+//-   meta(charset='UTF-8')
+//-   meta(name='viewport' content='width=device-width, initial-scale=1.0')
+//-   title Landing Page
+//-   link(rel='stylesheet', href='/css/product.css')
+//- header
+//-   h1(style='text-align: center;') KGL GROCERY LTD PRODUCTS
+//- main
+//-   section.stat-container
+//-     .stat-card
+//-       img.stat-image(src='/images/redb4.jpg' alt='Image 2')
+//-       h3(style='text-align: center;') Red Beans
+//-       p(style='text-align: center;')
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/blackb.jpg' alt='Image 2')
+//-       h3 Black Beans
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/whiteb.jpg' alt='Image 2')
-      h3 White Beans
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/whiteb.jpg' alt='Image 2')
+//-       h3 White Beans
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/greenb.jpg' alt='Image 2')
-      h3 Green Beans
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/greenb.jpg' alt='Image 2')
+//-       h3 Green Beans
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/rice1.jpg' alt='Image 2')
-      h3 Rice 
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/rice1.jpg' alt='Image 2')
+//-       h3 Rice 
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/whitem.jpg' alt='Image 2')
-      h3 Maize
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/whitem.jpg' alt='Image 2')
+//-       h3 Maize
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/mz4.jpg' alt='Image 2')
-      h3 Maize
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/mz4.jpg' alt='Image 2')
+//-       h3 Maize
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/redgn2.jpg' alt='Image 2')
-      h3 G-nuts
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/redgn2.jpg' alt='Image 2')
+//-       h3 G-nuts
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/pn1.jpg' alt='Image 2')
-      h3 G-nuts
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/pn1.jpg' alt='Image 2')
+//-       h3 G-nuts
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/soyb1.jpg' alt='Image 2')
-      h3 Soya Beans
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/soyb1.jpg' alt='Image 2')
+//-       h3 Soya Beans
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/soyb2.jpg' alt='Image 2')
-      h3 Soya Beans
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/soyb2.jpg' alt='Image 2')
+//-       h3 Soya Beans
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/cowp.jpg' alt='Image 2')
-      h3 Cow peas
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/cowp.jpg' alt='Image 2')
+//-       h3 Cow peas
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/cowps.jpg' alt='Image 2')
-      h3 Cow peas
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/cowps.jpg' alt='Image 2')
+//-       h3 Cow peas
       
-    .stat-card(style='text-align: center;')
-      img.stat-image(src='/images/cowps1.jpg' alt='Image 2')
-      h3 Cow Peas
+//-     .stat-card(style='text-align: center;')
+//-       img.stat-image(src='/images/cowps1.jpg' alt='Image 2')
+//-       h3 Cow Peas
       
-footer
-  p &copy; 2024 Designed by Sharon.O.
+//- footer
+//-   p &copy; 2024 Designed by Sharon.O.
