--- a/views/updatesale.pug
+++ b/views/updatesale.pug
@@ -12,7 +12,7 @@ head
     label(for='transactionId') Transaction ID:
     input#transactionId(type='text' name='transactionId' value = sale.transactionId)
     label(for='date') Date and Time:
-    input#date(type='datetime-local' name='date' value = sale.date)
+    input#date(type='date' name='date' value = sale.date)
     label(for='customerName') Customer Name:
     input#customerName(type='text' name='customerName' value = sale.customerName)
     label(for='items') Items (format: Item, Quantity, Price):
