--- a/public/css/credit.css
+++ b/public/css/credit.css
@@ -1,6 +1,6 @@
 body{
-    background-image: url(/images/ggt.jpg); 
-    background-size: cover;
+    /* background-image: url(/images/ggt.jpg);  */
+    /* background-size: cover; */
     /* max-width: 500px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -31,8 +31,9 @@ body{
 
 
 } 
-h1 {
+h2 {
     text-align: center;
+    color: black;
 }
 
 input[type="submit"] {
