--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,7 +9,7 @@
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-image: url(/images/ggt.jpg); 
+    background-image: url(/images/bb.jpg); 
     background-size: cover;
 
 } */
