--- a/public/css/produce.css
+++ b/public/css/produce.css
@@ -11,8 +11,8 @@ body{
     margin: 80px auto;
     align-items: center;
     background-color: #e1dd72;
-    align-content: center;
-    text-align: center; 
+    /* align-content: center; */
+    /* text-align: center;  */
 
 }
 .produce-form{
@@ -55,4 +55,7 @@ input[type="submit"]:hover {
   }
   
 
+
+
+  
 
