--- a/views/reports.pug
+++ b/views/reports.pug
@@ -1,76 +1,76 @@
-doctype html
-html(lang="en")
-head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title #{title}
-    link(rel="stylesheet" href="/css/report.css")
-body
-    block content
+//- doctype html
+//- html(lang="en")
+//- head
+//-     meta(charset="UTF-8")
+//-     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+//-     title #{title}
+//-     link(rel="stylesheet" href="/css/report.css")
+//- body
+//-     block content
 
-.container
-    h2.text-center.mt-5.mb-4 Revenue Reports
+//- .container
+//-     h2.text-center.mt-5.mb-4 Revenue Reports
 
-    .row
-      .col-md-4.mx-4
-        h4.mb-5 Grains Report
-        .card.card-custom.mx-2.mb-3.mt-3(style='width: 22rem;')
-          .card-body
-            h6 Quantity in Stock: #{new Intl.NumberFormat().format(totalgrains.stockQuantity)} Kg
-            h6 Total Expense: #{new Intl.NumberFormat().format(totalgrains.totalExpense)} UGX
-            h6 Projected Revenue: #{new Intl.NumberFormat().format(totalgrains.totalProjectedRevenue)} UGX
-            h6 Projected Profits: #{new Intl.NumberFormat().format(totalgrains.totalProjectedRevenue - totalgrains.totalExpense)} UGX
+//-     .row
+//-       .col-md-4.mx-4
+//-         h4.mb-5 Grains Report
+//-         .card.card-custom.mx-2.mb-3.mt-3(style='width: 22rem;')
+//-           .card-body
+//-             h6 Quantity in Stock: #{new Intl.NumberFormat().format(totalgrains.stockQuantity)} Kg
+//-             h6 Total Expense: #{new Intl.NumberFormat().format(totalgrains.totalExpense)} UGX
+//-             h6 Projected Revenue: #{new Intl.NumberFormat().format(totalgrains.totalProjectedRevenue)} UGX
+//-             h6 Projected Profits: #{new Intl.NumberFormat().format(totalgrains.totalProjectedRevenue - totalgrains.totalExpense)} UGX
 
-      .col-md-4.mx-4
-        h4.mb-5 Legumes Report
-        .card.card-custom.mx-2.mb-3.mt-3(style='width: 22rem;')
-          .card-body
-            h6 Quantity in Stock: #{new Intl.NumberFormat().format(totallegumes.stockQuantity)} Kg
-            h6 Total Expense: #{new Intl.NumberFormat().format(totallegumes.totalExpense)} UGX
-            h6 Projected Revenue: #{new Intl.NumberFormat().format(totallegumes.totalProjectedRevenue)} UGX
-            h6 Projected Profits: #{new Intl.NumberFormat().format(totallegumes.totalProjectedRevenue - totallegumes.totalExpense)} UGX
+//-       .col-md-4.mx-4
+//-         h4.mb-5 Legumes Report
+//-         .card.card-custom.mx-2.mb-3.mt-3(style='width: 22rem;')
+//-           .card-body
+//-             h6 Quantity in Stock: #{new Intl.NumberFormat().format(totallegumes.stockQuantity)} Kg
+//-             h6 Total Expense: #{new Intl.NumberFormat().format(totallegumes.totalExpense)} UGX
+//-             h6 Projected Revenue: #{new Intl.NumberFormat().format(totallegumes.totalProjectedRevenue)} UGX
+//-             h6 Projected Profits: #{new Intl.NumberFormat().format(totallegumes.totalProjectedRevenue - totallegumes.totalExpense)} UGX
 
-    .form-row
-      .col.form-group.col-md-12
-        br
-        form.search(action='/reports')
-          .form-row
-            .col-md-8
-              select.form-control(name='searchProduce')
-                option(value="") (Select produce)
-                option(value="beans") Beans
-                option(value="maize") Maize
-                option(value="cowpeas") Cowpeas
-                option(value="rice") Rice
-                option(value="soyabeans") Soya Beans
-            .col-md-4
-              input.btn.btn-primary.btn-block(type="submit" value="Search")
+//-     .form-row
+//-       .col.form-group.col-md-12
+//-         br
+//-         form.search(action='/reports')
+//-           .form-row
+//-             .col-md-8
+//-               select.form-control(name='searchProduce')
+//-                 option(value="") (Select produce)
+//-                 option(value="beans") Beans
+//-                 option(value="maize") Maize
+//-                 option(value="cowpeas") Cowpeas
+//-                 option(value="rice") Rice
+//-                 option(value="soyabeans") Soya Beans
+//-             .col-md-4
+//-               input.btn.btn-primary.btn-block(type="submit" value="Search")
 
-    table.table.table-striped
-      thead
-        tr
-          th(scope='col') Produce Name
-          th(scope='col') Tonnage (Kg)
-          th(scope='col') Produce cost per Kg (UGX)
-          th(scope='col') Revenue Projected (UGX)
-          th(scope='col') Profits Projected (UGX)
+//-     table.table.table-striped
+//-       thead
+//-         tr
+//-           th(scope='col') Produce Name
+//-           th(scope='col') Tonnage (Kg)
+//-           th(scope='col') Produce cost per Kg (UGX)
+//-           th(scope='col') Revenue Projected (UGX)
+//-           th(scope='col') Profits Projected (UGX)
 
-      tbody
-        if produces.length
-          each produce in produces
-            tr
-              td #{produce.produceName}
-              td #{new Intl.NumberFormat().format(produce.tonnage)}
-              td #{new Intl.NumberFormat().format(produce.produceCost)}
-              td #{new Intl.NumberFormat().format(produce.tonnage * produce.sellingPrice)}
-              td #{new Intl.NumberFormat().format(produce.tonnage * (produce.sellingPrice - produce.produceCost))}
+//-       tbody
+//-         if produces.length
+//-           each produce in produces
+//-             tr
+//-               td #{produce.produceName}
+//-               td #{new Intl.NumberFormat().format(produce.tonnage)}
+//-               td #{new Intl.NumberFormat().format(produce.produceCost)}
+//-               td #{new Intl.NumberFormat().format(produce.tonnage * produce.sellingPrice)}
+//-               td #{new Intl.NumberFormat().format(produce.tonnage * (produce.sellingPrice - produce.produceCost))}
 
-          tr
-            th Totals
-            td #{new Intl.NumberFormat().format(totalcrop.stockQuantity)}
-            td #{new Intl.NumberFormat().format(totalcrop.totalExpense)}
-            td #{new Intl.NumberFormat().format(totalcrop.totalProjectedRevenue)}
-            td #{new Intl.NumberFormat().format(totalcrop.totalProjectedRevenue - totalcrop.totalExpense)}
-        else
-          p That produce has no revenue captured or you haven't selected a crop.
+//-           tr
+//-             th Totals
+//-             td #{new Intl.NumberFormat().format(totalcrop.stockQuantity)}
+//-             td #{new Intl.NumberFormat().format(totalcrop.totalExpense)}
+//-             td #{new Intl.NumberFormat().format(totalcrop.totalProjectedRevenue)}
+//-             td #{new Intl.NumberFormat().format(totalcrop.totalProjectedRevenue - totalcrop.totalExpense)}
+//-         else
+//-           p That produce has no revenue captured or you haven't selected a crop.
           
