Edited the Sales list page

--- a/views/sales-agentdashboard.pug
+++ b/views/sales-agentdashboard.pug
@@ -11,10 +11,10 @@ nav.horizontal-navbar
   a(href='home') Home
   a(href='thesale') Make Sales
   a(href='creditsale') Make Credit sales
-  a(href='stock') Purchase 
 nav.vertical-navbar
   a(href='Creditlist') Credit Sales List
   a(href='saleslist') Sales List
+  a(href='viewStock') Stock Levels
   a(href='logout') Logout
 .main-content
   h1 Welcome to KGL Grocery Limited Sales Agent Dashboard.
