--- a/public/css/credit.css
+++ b/public/css/credit.css
@@ -18,13 +18,10 @@ body{
     padding:20px;
     margin: 80px auto;
     background-color: #e1dd72;
-    text-align: center;
-    align-content: center;
+    /* text-align: center; */
+    /* align-content: center; */
 }   
    
-    
-
-
 .produce-form{
     align-items: center;
     justify-content: center;
