--- a/public/css/login.css
+++ b/public/css/login.css
@@ -27,6 +27,7 @@ form {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: white;
 }
 
 input[type="email"],
@@ -42,7 +43,7 @@ input[type="submit"] {
     width: 50%;
     padding: 10px;
     background-color: #e1dd72;
-    color: black;
+    color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -57,8 +58,8 @@ a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: whitesmoke;
-    font-size: medium;
+    color: black;
+    font-size: large;
     text-decoration: none;
 }
 
