--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -25,6 +25,7 @@ form {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: white
 }
 
 input[type="text"],
@@ -64,7 +65,7 @@ a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
