--- a/views/credit_sale.pug
+++ b/views/credit_sale.pug
@@ -8,6 +8,7 @@ block content
       meta(charset='UTF-8')
       meta(name='viewport' content='width=device-width, initial-scale=1.0')
       title Goods sold on credit
+      link(rel='stylesheet' href='/css/form.css')
       link(rel='stylesheet' href='/css/credit.css')
     body
       .container
@@ -16,13 +17,9 @@ block content
           label(for='buyer') Name of Buyer:
           input#buyer(type='text' name='buyer')
           span#buyerError.error-message
-          br
-          br
           label(for='nin') National ID (NIN):
           input#nin(type='text' name='nin')
           span#ninError.error-message
-          br
-          br
           label(for='location') Location:
           input#location(type='text' name='location')
           span#locationError.error-message
